4.6/nifi-registry/nr_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: nifi-registry
    app.kubernetes.io/component: nifi-registry
    app.kubernetes.io/instance: nifi-registry
  name: nifi-registry
  namespace: alpha-httpbin
spec:
  clusterIP: 172.30.6.115
  ports:
  - name: https-18443
    port: 18443
  selector:
    deployment: nifi-registry
